--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,9 @@ h1{
     height:auto;
     text-align: center;
     font-size: 30px;
-    left:100%;
+    top:0%;
+    left:50%;
+    padding: 15px;
 }
 
 h2{
